--- a/Website/z1-lpstd-product.html
+++ b/Website/z1-lpstd-product.html
@@ -43,11 +43,11 @@
 
             <!-- Slideshow images -->
             <div class="mySlides fade">
-              <img src="assets/images/les-paul-icon.jpg" style="width:50%">
+              <img src="assets/images/les-paul-icon.jpg" style="width:50%" alt="Les Paul Guitar">
             </div>
           
             <div class="mySlides fade">
-              <img src="assets/images/image-coming-soon.png" style="width:50%">
+              <img src="assets/images/image-coming-soon.png" style="width:50%" alt="Coming Soon">
             </div>
             
             <!-- Next and Previous buttons -->
@@ -110,7 +110,7 @@
     <!-- JS Scripts -------------------------------------------------------------------------------------------------------->
     <!-------------------------------------------------------------------------------------------------------------------------->
    
-    <script src="assets/scripts/menuToggle.js"></script>
+    <script src="assets/scripts/menutoggle.js"></script>
     <script src="assets/scripts/availability.js"></script>
     <script src="assets/scripts/index-slideshow.js"></script>
     <script>initSlideshow(false); // Manual slideshow</script>
