--- a/Website/z2-telstd-product.html
+++ b/Website/z2-telstd-product.html
@@ -42,11 +42,11 @@
 
             <!-- Slideshow images -->
             <div class="mySlides fade">
-              <img src="assets/images/telecaster-icon-2.jpg" style="width:50%">
+              <img src="assets/images/telecaster-icon-2.jpg" style="width:50%" alt="Telecaster Guitar">
             </div>
           
             <div class="mySlides fade">
-              <img src="assets/images/image-coming-soon.png" style="width:50%">
+              <img src="assets/images/image-coming-soon.png" style="width:50%" alt="Coming Soon">
             </div>
           
             <!-- Next and Previous buttons -->
@@ -109,7 +109,7 @@
     <!-- JS Scripts -------------------------------------------------------------------------------------------------------->
     <!-------------------------------------------------------------------------------------------------------------------------->
    
-    <script src="assets/scripts/menuToggle.js"></script>
+    <script src="assets/scripts/menutoggle.js"></script>
     <script src="assets/scripts/availability.js"></script>
     <script src="assets/scripts/index-slideshow.js"></script>
     <script>initSlideshow(false); // Manual slideshow</script>
