--- a/Website/comp-guide.html
+++ b/Website/comp-guide.html
@@ -37,7 +37,7 @@
     <!-------------------------------------------------------------------------------------------------------------------------->
    
     <div class="comp-main-content">
-        <br></br>
+        <br>
         <a href="Resources.html">Back to Resources</a> <!-- Navigation link to Resources -->
 
         <h2>Components</h2>
@@ -49,7 +49,7 @@
             <img src="assets/images/image-coming-soon.png" alt="comp-cover-photo">
         </div>
    
-        <br></br>
+        <br>
 
         <!-- Pots -->
         <h3>Potentiometers</h3>
@@ -58,7 +58,7 @@
         <div class="comp-pots-photo">
             <img src="assets/images/image-coming-soon.png" alt="comp-cover-photo">
         </div>
-        <br></br>
+        <br>
 
         <!-- Capacitors -->
         <h3>Capacitors</h3>
@@ -67,7 +67,7 @@
         <div class="comp-cap-photo">
             <img src="assets/images/image-coming-soon.png" alt="comp-cover-photo">
         </div>
-        <br></br>
+        <br>
 
         <!-- Output Jacks -->
         <h3>Output Jacks</h3>
@@ -77,7 +77,7 @@
         <div class="comp-oj-photo">
             <img src="assets/images/image-coming-soon.png" alt="comp-cover-photo">
         </div>
-        <br></br>
+        <br>
 
         <!-- Switches -->
         <h3>Switches</h3>
@@ -86,7 +86,7 @@
         <div class="comp-switch-photo">
             <img src="assets/images/image-coming-soon.png" alt="comp-cover-photo">
         </div>
-        <br></br>
+        <br>
 
         <!-- Bridge -->
         <h3>Bridge</h3>
@@ -95,7 +95,7 @@
         <div class="comp-bridge-photo">
             <img src="assets/images/image-coming-soon.png" alt="comp-cover-photo">
         </div>
-        <br></br>
+        <br>
 
         <!-- Nut -->
         <h3>Nut</h3>
@@ -104,7 +104,7 @@
         <div class="comp-nut-photo">
             <img src="assets/images/image-coming-soon.png" alt="comp-cover-photo">
         </div>
-        <br></br>
+        <br>
 
         <!-- Tuners -->
         <h3>Tuners</h3>
@@ -112,7 +112,7 @@
         <p>Good-quality tuners contribute significantly to tuning stability. Locking tuners, in particular, are known for improving stability as they secure the string more firmly, reducing the chances of slipping and minimising the need for frequent retuning. Having reliable tuners ensures your guitar stays in tune during play.</p>
         <div class="comp-tuners-photo">
             <img src="assets/images/image-coming-soon.png" alt="comp-cover-photo">
-        </div><br></br>
+        </div><br>
 
         <!-- Frets -->
         <h3>Frets</h3>
@@ -122,7 +122,7 @@
         <div class="comp-frets-photo">
             <img src="assets/images/image-coming-soon.png" alt="comp-cover-photo">
         </div>
-        <br></br>
+        <br>
 
     </div>    
 
@@ -166,6 +166,6 @@
     <!-- JS Scripts -------------------------------------------------------------------------------------------------------->
     <!-------------------------------------------------------------------------------------------------------------------------->
    
-    <script src="assets/scripts/menuToggle.js"></script>
+    <script src="assets/scripts/menutoggle.js"></script>
 </body>
 </html>
